unpackaged/main/default/objects/AcctSeed__Product_Part__c/AcctSeed__Product_Part__c.object-meta.xml
<CustomObject>
    <description>Used to document the relationship between products. The primary use of this record is to create product kits which are used in the Accounting Seed ERP application.</description>
    <label>Product Part</label>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Product Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>