unpackaged/main/default/objects/AcctSeed__Product_Part__c/fields/AcctSeed__Product__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Parts</relationshipLabel>
    <relationshipName>Product_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>