unpackaged/main/default/objects/AcctSeed__Product_Part__c/fields/AcctSeed__Product_Part__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Product_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Part</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parent Product</relationshipLabel>
    <relationshipName>Product_Parts1</relationshipName>
    <type>Lookup</type>
</CustomField>