unpackaged/main/default/objects/AcctSeed__Product_Part__c/fields/Product_Part_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Part_Unit_Price__c</fullName>
    <label>Product Part Sales Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>